--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
   <app-root></app-root>
+    <span class="secondary-text">
+        Developed by <a href="https://github.com/shubham-0819">shubham</a>
+    </span>
 </body>
 </html>
